apps/sonarr/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: sonarr
          port: 8989
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
